--- a/app/assets/stylesheets/interface/navigations/_thin_sidebar.scss
+++ b/app/assets/stylesheets/interface/navigations/_thin_sidebar.scss
@@ -32,9 +32,9 @@ nav.thin-sidebar-container {
     }
 
     i {
-      margin: 0;
-      padding: 1.3em 1em;
+      padding: 1.2em 1em;
       display: block;
+      font-size: $thin-icon-font-size;
       color: $thin-sidebar-color;
       text-align: center;
 
