--- a/lib/templates/haml/scaffold/new.html.haml
+++ b/lib/templates/haml/scaffold/new.html.haml
@@ -1,6 +1,3 @@
-= content_for :section_title do
+.<%= singular_table_name.titleize %>-new-container
   %h1 New&nbsp;<%= singular_table_name.titleize %>
-
-.row
-  .new-container
-    = render 'form'
+  = render 'form'
