--- a/app/assets/stylesheets/interface/_dropdowns.scss
+++ b/app/assets/stylesheets/interface/_dropdowns.scss
@@ -4,7 +4,6 @@
   position: relative;
 
   &:hover {
-    padding-bottom: 2em;
     color: $dropdown-color-hover;
   }
 }
@@ -16,6 +15,7 @@
   top: 50%;
 
   > * {
+    padding: 0.25em;
     width: 10rem;
     color: $dropdown-color;
     background-color: $dropdown-background-color;
@@ -43,7 +43,9 @@
 
   &:hover {
     .drop-down-list {
+      padding-top: 1em;
       display: block;
+      z-index: 100;
     }
   }
 }
