--- a/app/assets/stylesheets/interface/_plans.scss
+++ b/app/assets/stylesheets/interface/_plans.scss
@@ -10,14 +10,14 @@
   .title {
     padding: 1rem 0;
     background-color: $plan-title-background-color;
-    font-size: 1.5em;
+    font-size: $plan-title-font-size;
     border-radius: $round-edges;
   }
 
   .price {
-    font-size: 4.5em;
+    padding: 1.5rem 0;
+    font-size: $plan-price-font-size;
     background-color: $plan-price-background-color;
-    margin-bottom: 0.25em;
 
     span {
       font-size: 1.25rem;
@@ -42,10 +42,11 @@
 
   .button {
     @extend %button;
-    margin: 1em 0 2em 0;
+    margin: 1.2em 0 1.6em 0;
   }
 }
 
 .plan {
   @extend %plan;
+  width: 20em;
 }
