--- a/app/assets/stylesheets/interface/_typography.scss
+++ b/app/assets/stylesheets/interface/_typography.scss
@@ -1,10 +1,25 @@
+// Establish Baseline
+html {
+  font-size: ($base-font-size / 16px) * 100%;
+}
+
+body {
+  line-height: line-height();
+}
+
 // Links
 a {
+  font-family: $header-font-family;
+  font-weight: 700;
   color: $link-color;
   text-decoration: none;
 
   &:hover {
     color: $link-color-hover;
+  }
+
+  &.active {
+    color: $link-color-active;
   }
 }
 
@@ -24,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin: 1.5em 0;
+  margin: 1.5rem 0;
   font-family: $font-family;
   font-weight: $font-weight;
   color: $font-color;
@@ -53,5 +68,50 @@ cite {
   }
 }
 
-// Establish Baseline
-@include establish-baseline;
+// Modular Scale
+$typographic-element: (
+  h1: (
+    $ms-up-3,
+    $ms-small-up-3
+  ),
+
+  h2: (
+    $ms-up-2,
+    $ms-small-up-2
+  ),
+
+  h3: (
+    $ms-up-1
+    $ms-small-up-1
+  ),
+
+  h4: (
+    $ms-up,
+    $ms-small-up
+  ),
+
+  h5: (
+    $ms-base,
+    $ms-base
+  ),
+
+  h6: (
+    $ms-down,
+    $ms-small-down
+  ),
+
+  p: (
+    $ms-base,
+    $ms-small-base
+  ),
+);
+
+@each $element, $size in $typographic-element {
+  #{$element} {
+    @include adjust-font-size-to( nth($size, 1) );
+
+    @media only screen and (max-width: 1024px) {
+      @include adjust-font-size-to( nth($size, 2) );
+    }
+  }
+}
