--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -1,10 +1,10 @@
 = simple_form_for(@<%= singular_table_name %>) do |f|
   = f.error_notification
-
-  .form-inputs
-  <%- attributes.each do |attribute| -%>
-    = f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>
+<%- attributes.each do |attribute| -%>
+  <%- if attribute.reference? -%>
+    = f.association :<%= attribute.name %>, collection: <%= attribute.name.camelize%>.all, label_method: lambda {|obj| obj.inspect }
+  <%- else -%>
+    = f.input :<%= attribute.name %>
   <%- end -%>
-
-  .form-actions
-    = f.button :submit
+<%- end -%>
+    = f.button :submit, class: 'button right'
