--- a/app/assets/stylesheets/interface/_base.scss
+++ b/app/assets/stylesheets/interface/_base.scss
@@ -1,4 +1,4 @@
-@import 'normalize';
+@import 'normalize-rails';
 @import 'modular-scale';
 @import 'compass/typography/vertical_rhythm';
 @import 'susy';
@@ -17,4 +17,4 @@
 @import 'states';
 @import 'tables';
 @import 'navigations/navigations';
-@import 'footer';
+@import 'footers';
